--- a/data/base_config.yml
+++ b/data/base_config.yml
@@ -4,7 +4,7 @@ postgres:
   name: codebase
   user: postgres
   password: postgres
-  host: localhost
+  host: postgres
   port: 5432
 llm:
   model_name: llama3.2
