added UI and started documentation

--- a/data/base_config.yml
+++ b/data/base_config.yml
@@ -1,5 +1,5 @@
 codebase:
-  path: /coding-projects/llm-sheet-analysis
+  path: # should be left empty for using the Streamlit app
 postgres:
   name: codebase
   user: postgres
